--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="st container-hero">
                     <!-- left-box -->
                     <div class="hero-photo">
-                        <img src="/img/guy.jpg" alt="guy" class="img">
+                        <img src="./img/guy.jpg" alt="guy" class="img">
                         <!-- card -->
                         <ul class="card-list">
                             <li class="card-item">
