--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="st container-testimonial">
                     <!-- left box -->
                     <div class="left-box">
-                        <div class="avt"></div>
+                        <img src="./img/Ellipse 2649.jpg" alt="" class="avt">
                         <p class="author">Peter Moor</p>
                         <p class="title-of-author">Student of Web Design</p>
                         <img src="./img/icon-slide.svg" alt="testimonial" class="img-icon-slide">
